Add structuredConcurrency support
https://docs.oracle.com/en/java/javase/21/core/structured-concurrency.html